src/objects/Communication__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <label>Delivered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Status__c</fullName>
        <label>Delivery Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employer</label>
        <referenceTo>Business__c</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gateway_Reference__c</fullName>
        <externalId>true</externalId>
        <label>Gateway Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Seeker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Seeker</label>
        <referenceTo>Job_Seeker__c</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <label>Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commenced Marketing</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Send Resume</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wage_Subsidy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wage Subsidy</label>
        <referenceTo>Wage_Subsidy__c</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Communication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_Seeker__c</columns>
        <columns>Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Sent__c</columns>
        <columns>Wage_Subsidy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C{00000}</displayFormat>
        <label>Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communications</pluralLabel>
    <recordTypes>
        <fullName>Email</fullName>
        <active>true</active>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Seeker</fullName>
        <active>true</active>
        <label>Job Seeker</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMS_Notification</fullName>
        <active>true</active>
        <label>SMS Notification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wage_Subsidy</fullName>
        <active>true</active>
        <label>Wage Subsidy</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>